bookmarks: fix jumping layout (missing activelink)
This is 1c1862dfff299a40d129b593700cf52d2eddb4ed but indented like the
rest of the file.

--- a/src/freenet/clients/http/staticfiles/bookmark.css
+++ b/src/freenet/clients/http/staticfiles/bookmark.css
@@ -18,6 +18,10 @@ ul#bookmarks span.actions img {
 	margin-left: 3px;
 }
 
+ul#bookmarks td img {
+	display: block;
+}
+
 a.bookmark-title-updated {
 	font-weight: bold;
 }
